Fix typo in homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import PhotoSommaireReference from '@static/photo-sommaire.jpg';
 import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.png';
 import HommeClavierReference from '@static/homme-clavier.png';
 
-import BaseLayout from "@/layouts/BaseLayout.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
 
 import Number from '@components/ui/number.astro';
 import SectionArticles from '@/components/homepage/section_articles.astro';
