Underline links when hovering

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -15,8 +15,8 @@
                         <p>75003 Paris</p>
                     </div>
                     <div class="flex flex-col">
-                        <a href="mailto:contact@wearelog.fr">contact@wearelog.fr</a>
-                        <a href="recrutement@wearelog.fr">recrutement@wearelog.fr</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@wearelog.fr</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="recrutement@wearelog.fr">recrutement@wearelog.fr</a>
                     </div>
                 </div>
                 <div class="relative flex items-center my-auto">
@@ -37,12 +37,36 @@
                 </div>
                 <div class="hidden relative lg:flex items-center ml-20 font-semibold text-xl">
                     <ul class="marker:text-yellow-log list-inside list-[square]">
-                        <li>Expertise technique</li>
-                        <li>Partenariat</li>
-                        <li>Engagement RSE</li>
-                        <li>Recrutement</li>
-                        <li>Contact</li>
-                        <li>Blog</li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Expertise technique
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Partenariat
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Engagement RSE
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Recrutement
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Contact
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                                Blog
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
