--- a/src/components/job/description.astro
+++ b/src/components/job/description.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="flex flex-col max-w-4xl pr-24">
+<div class="flex flex-col items-center lg:items-start max-w-4xl mb-10 px-4 lg:pr-[5vw] lg:pl-0">
     <div class="flex flex-row gap-4 items-center">
         <h2 class="font-bold text-3xl">
             Descriptif du poste
