Use next-gen avif format for images

--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -1,5 +1,5 @@
 ---
-import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.png';
+import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif';
 ---
 
 <section class="relative w-full my-20 z-0">
