--- a/src/components/homepage/section_recruitment.astro
+++ b/src/components/homepage/section_recruitment.astro
@@ -1,5 +1,5 @@
 ---
-import HommeClavierReference from '@static/homme-clavier.png';
+import HommeClavierReference from '@static/homme-clavier.avif';
 
 import { getCollection } from 'astro:content';
 const jobEntries = await getCollection('job');
