--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -1,6 +1,6 @@
 ---
-import PictoOrdinateurReference from '@static/picto-ordinateur.png';
-import PhotoSommaireReference from '@static/photo-sommaire.jpg';
+import PictoOrdinateurReference from '@static/picto-ordinateur.avif';
+import PhotoSommaireReference from '@static/photo-sommaire.avif';
 ---
 
 <section class="relative w-full mt-20 mb-40">
