--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -1,5 +1,5 @@
 ---
-import PosteReference from '@static/AdobeStock_482164643.jpeg'
+import PosteReference from '@static/AdobeStock_482164643.avif'
 
 interface Props {
     salary: string;
