--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 
 import JobCard from "@/components/job/job_card.astro";
 
-import HommeClavierReference from "@static/homme-clavier.png";
+import HommeClavierReference from "@static/homme-clavier.avif";
 
 import { getCollection } from "astro:content";
 const allJobEntries = await getCollection('job');
