--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -1,5 +1,5 @@
 ---
-import ArticleBlogReference from '@static/article_blog.jpg';
+import ArticleBlogReference from '@static/article_blog.avif';
 
 interface Props {
     title: string;
