--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -5,12 +5,12 @@ interface Props {
     salary: string;
     starting_date: Date;
     experience: string;
-    job: string;
+    job_name: string;
     job_status: string;
     travel_area: string;
     job_sector: string;
     telework: string;
-    hr: string;
+    hr_name: string;
     hr_email: string;
     hr_phone: string;
 }
@@ -18,12 +18,12 @@ const {
     salary,
     starting_date,
     experience,
-    job,
+    job_name,
     job_status,
     travel_area,
     job_sector,
     telework,
-    hr,
+    hr_name,
     hr_email,
     hr_phone,
 }: Props = Astro.props;
@@ -47,7 +47,7 @@ const {
             </li>
             <li class="flex flex-row gap-4 items-center">
                 <svg class="w-auto h-12 fill-blue-log" viewBox="0 0 303.75 289.48" fill-rule="evenodd"><path d="M123.3 93.28h5.25v-3.72c0-4.35 3.52-7.87 7.87-7.87h30.92c4.35 0 7.87 3.52 7.87 7.87v3.72h5.25v-3.72c0-7.24-5.87-13.12-13.12-13.12h-30.92c-7.24 0-13.12 5.87-13.12 13.12v3.72zm46.13 64.36c-2.06 7.77-9.14 13.5-17.55 13.5s-15.5-5.74-17.56-13.51c-19.23-1.33-38.47-4.83-57.7-10.49v57.73a5.25 5.25 0 0 0 5.25 5.25h140.02a5.25 5.25 0 0 0 5.25-5.25v-57.73c-19.24 5.68-38.47 9.18-57.71 10.5h0zm-35.7-5.31c.35-9.71 8.34-17.49 18.14-17.49a18.16 18.16 0 0 1 18.14 17.5c19.54-1.41 39.08-5.12 58.61-11.12a5.25 5.25 0 0 0 3.69-5.01v-32.43a5.22 5.22 0 0 0-1.54-3.71c-.98-.98-2.32-1.54-3.71-1.54H76.67a5.22 5.22 0 0 0-3.71 1.54c-.98.98-1.54 2.32-1.54 3.71v32.43c0 2.3 1.5 4.33 3.7 5.01 19.54 5.98 39.07 9.69 58.61 11.11h0zm31.05.66c0 7.13-5.78 12.91-12.91 12.91s-12.91-5.78-12.91-12.91 5.78-12.91 12.91-12.91 12.91 5.78 12.91 12.91"/></svg>
-                <p>Métier : {job}</p>
+                <p>Métier : {job_name}</p>
             </li>
             <li class="flex flex-row gap-4 items-center">
                 <svg class="w-auto h-12 fill-blue-log" viewBox="0 0 303.75 289.48" fill="#71c8e2"><path d="M151.88 155.59c18.6 0 33.73-19.74 33.73-38.34s-15.13-33.73-33.73-33.73-33.73 15.13-33.73 33.73 15.13 38.34 33.73 38.34zm25.31.35a38.74 38.74 0 0 1-23.54 7.95h-3.55c-8.84 0-17.01-2.97-23.55-7.95-21.36 3.45-37.67 21.97-37.67 44.3 0 12.27 28.2 22.22 62.99 22.22s62.99-9.95 62.99-22.22c0-22.33-16.31-40.85-37.67-44.3h0z"/></svg>
@@ -70,7 +70,7 @@ const {
     <a class="bg-blue-log rounded-xl text-center font-extrabold text-white text-3xl py-4" href={`mailto:${hr_email}`}>Postulez</a>
     <div class="bg-blue-log rounded-[42px] text-center text-white font-extrabold pt-12 pb-8 px-8">
         <h2 class="text-2xl mb-8">Responsable de l'offre</h2>
-        <p class="text-3xl mb-8">{hr}</p>
+        <p class="text-3xl mb-8">{hr_name}</p>
         <a class="font-normal text-lg hover:underline hover:underline-offset-4" href={`tel:${hr_phone}`}>{hr_phone.replaceAll('.', ' ')}</a><br />
         <a class="font-normal text-lg hover:underline hover:underline-offset-4" href={`mailto:${hr_email}`}>{hr_email}</a>
     </div>
