--- a/src/layouts/JobOfferLayout.astro
+++ b/src/layouts/JobOfferLayout.astro
@@ -1,4 +1,6 @@
 ---
+import type { CollectionEntry } from "astro:content";
+
 import BaseLayout from "./BaseLayout.astro";
 
 import Description from "@/components/job/description.astro";
@@ -6,7 +8,7 @@ import Position from "@/components/job/position.astro";
 import TitleBanner from "@/components/ui/title_banner.astro";
 
 interface Props {
-    frontmatter: any
+    frontmatter: any;
 }
 const { frontmatter }: Props = Astro.props;
 ---
@@ -46,17 +48,17 @@ const { frontmatter }: Props = Astro.props;
                 </p>
             </Description>
             <Position
-                salary="50 - 80 k€ brut annuel"
-                starting_date={new Date(2022, 9, 12)}
-                experience="Minimum 3 ans"
-                job="Chef de projet digital"
-                job_status="Cadre du secteur privé"
-                travel_area="Régionale"
-                job_sector="Conseil en systèmes et logiciels informatiques"
-                telework="Partiel possible"
-                hr="Laetitia BASTIANI"
-                hr_email="email@log.consulting"
-                hr_phone="+33.0.00.00.00.00"
+                salary={frontmatter.salary}
+                starting_date={frontmatter.starting_date}
+                experience={frontmatter.experience}
+                job_name={frontmatter.job_name}
+                job_status={frontmatter.job_status}
+                travel_area={frontmatter.travel_area}
+                job_sector={frontmatter.job_sector}
+                telework={frontmatter.telework}
+                hr_name={frontmatter.hr_name}
+                hr_email={frontmatter.hr_email}
+                hr_phone={frontmatter.hr_phone}
             />
         </div>
         <div class="flex flex-col items-center px-4 lg:px-0">
