--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -33,7 +33,7 @@ const {
     <div class="overflow-hidden max-w-[480px] flex flex-col border-4 border-blue-log rounded-[42px]">
         <img class="w-full" src={PosteReference} alt="Poste de référence" />
         <h1 class="text-2xl font-bold p-4">LE POSTE</h1>
-        <div class="grid grid-cols-8 content-around text-xl leading-10 divide-x divide-y divide-dashed p-4">
+        <div class="grid grid-cols-8 content-around text-xl leading-10 p-4">
             <div class="col-start-1 col-span-1"></div>
             <div class="col-start-2 col-span-8">
                 <p>Salaire: {salary}</p>
