Update navigation bar links

--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -14,7 +14,7 @@
                     <div class="hidden lg:block relative bg-white">
                         <ul class="flex flex-row text-lg space-x-8 leading-8 text-center">
                             <li>
-                                <a class="hover:text-blue-log" href="#">Expertise</a>
+                                <a class="hover:text-blue-log" href="/expertise">Expertise</a>
                             </li>
                             <li>
                                 <a class="hover:text-blue-log" href="#">Métiers</a>
