Remove margin for cleaner `space-y-` attribute

--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -2,7 +2,7 @@
 import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif';
 ---
 
-<section class="relative w-full my-20 z-0">
+<section class="relative w-full z-0">
     <div class="absolute h-[400px] lg:h-[530px] top-[280px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(25vw-205px)] z-10">
         <img class="h-full" src={HommeCourseOrdinateurReference} alt="Homme en train de courir avec un ordinateur" />
     </div>
