--- a/src/components/homepage/section_recruitment.astro
+++ b/src/components/homepage/section_recruitment.astro
@@ -5,7 +5,7 @@ import { getCollection } from 'astro:content';
 const jobEntries = await getCollection('job');
 ---
 
-<section class="relative w-full my-20">
+<section class="relative w-full">
     <div class="absolute h-[36rem] bottom-[460px] lg:bottom-0 left-[calc(50vw-160px)] z-0">
         <img class="h-full" src={HommeClavierReference} alt="Homme avec un clavier" />
     </div>
