--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -3,7 +3,7 @@ import PictoOrdinateurReference from '@static/picto-ordinateur.avif';
 import PhotoSommaireReference from '@static/photo-sommaire.avif';
 ---
 
-<section class="relative w-full mt-20 mb-40">
+<section class="relative w-full mt-20">
     <div class="flex flex-col lg:flex-row items-center">
         <img class="w-full lg:w-[50vw]" src={PhotoSommaireReference} alt="Photo sommaire" />
         <div class="flex flex-col pl-4 lg:px-12 lg:w-[50vw] lg:h-[25vw] py-12 lg:py-0 bg-black text-white justify-center">
