--- a/src/components/ui/title_banner.astro
+++ b/src/components/ui/title_banner.astro
@@ -5,7 +5,7 @@ interface Props {
 const { title }: Props = Astro.props;
 ---
 
-<header class="flex flex-row items-end w-full h-28 mb-24">
+<header class="flex flex-row items-end w-full h-28">
   <div class="hidden lg:flex flex-grow items-start justify-end h-[88px] bg-gray-log">
     <div class="bg-transparent border-l-2 border-b-2 rounded-bl-3xl border-black w-[44px] h-[44px]">
     </div>
