--- a/src/pages/expertise.astro
+++ b/src/pages/expertise.astro
@@ -16,7 +16,7 @@ import DatacenterReference from "@static/datacenter.avif";
         color={Color.RED}
         image={DatacenterReference}
     />
-    <section class="relative max-w-7xl mx-auto my-20 text-center">
+    <section class="relative max-w-7xl mx-auto text-center">
         <h1 class="font-bold text-3xl uppercase">Nos savoirs-faires</h1>
         <div class="grid grid-cols-3 gap-6 mt-16">
             <div class="flex flex-col items-center gap-4">
@@ -90,7 +90,7 @@ import DatacenterReference from "@static/datacenter.avif";
             </div>
         </div>
     </section>
-    <section class="relative w-full bg-gray-log mt-20 mb-40 py-14">
+    <section class="relative w-full bg-gray-log py-14">
         <div class="flex flex-col gap-10 max-w-8xl mx-auto">
             <h1 class="inline-flex items-center gap-8 font-bold text-4xl uppercase tracking-wide">
                 Notre écosystème technologique
@@ -113,7 +113,7 @@ import DatacenterReference from "@static/datacenter.avif";
             </div>
         </div>
     </section>
-    <section class="relative max-w-8xl mx-auto mt-20 mb-40">
+    <section class="relative max-w-8xl mx-auto">
         <div class="flex flex-col lg:flex-row items-center">
             <div class="bg-gray-log lg:w-[50vw] h-[548px]">
                 <div class="absolute overflow-hidden -top-[2rem] right-[38.6vw] border-[3px] rounded-3xl border-black h-[calc(100%+4rem)] w-[32vw]">
