--- a/src/components/homepage/section_articles.astro
+++ b/src/components/homepage/section_articles.astro
@@ -2,7 +2,7 @@
 import ArticleCard from "@components/ui/article_card.astro";
 ---
 
-<section class="relative w-full my-20 text-center">
+<section class="relative w-full text-center">
     <h1 class="font-bold text-3xl py-8">NOS DERNIERS ARTICLES</h1>
     <div class="flex flex-col lg:flex-row gap-10 justify-center items-center mx-auto max-lg:px-4 py-8">
         <ArticleCard title="Titre d'un article" description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus," class="lg:flex"/>
