--- a/src/components/homepage/section_team.astro
+++ b/src/components/homepage/section_team.astro
@@ -3,7 +3,7 @@ import Carousel from "@components/ui/carousel.astro";
 import LoggerCard from "@components/ui/logger_card.astro";
 ---
 
-<section class="relative w-full my-20 text-center">
+<section class="relative w-full text-center">
     <div class="flex flex-row gap-12 justify-center py-8">
         <h1 class="font-bold text-3xl my-8">NOTRE ÉQUIPE DE LOGGERS</h1>
     </div>
