--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -10,7 +10,7 @@ const allJobEntries = await getCollection('job');
 ---
 
 <BaseLayout title="Rejoignez-nous">
-    <section class="relative w-full my-20">
+    <section class="relative w-full">
         <div class="absolute h-[32rem] top-[160px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(50vw-100px)]">
             <img class="h-full" src={HommeClavierReference} alt="Homme avec un clavier" />
         </div>
@@ -38,7 +38,7 @@ const allJobEntries = await getCollection('job');
             </div>
         </div>
     </section>
-    <section class="relative px-4 sm:px-0 sm:max-w-sm md:max-w-4xl lg:max-w-8xl mx-auto my-20">
+    <section class="relative px-4 sm:px-0 sm:max-w-sm md:max-w-4xl lg:max-w-8xl mx-auto">
         <div class="flex flex-col gap-20 items-center justify-center text-center mb-20">
             <h1 class="font-bold text-4xl">NOS OFFRES D'EMPLOI</h1>
         </div>
