--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -20,7 +20,7 @@
                                 <a class="hover:text-blue-log" href="#">Métiers</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="#">Engagements</a>
+                                <a class="hover:text-blue-log" href="/engagements">Engagements</a>
                             </li>
                             <li>
                                 <a class="hover:text-blue-log" href="#">Les Loggers</a>
