Improve title styling

--- a/src/components/homepage/section_team.astro
+++ b/src/components/homepage/section_team.astro
@@ -5,7 +5,7 @@ import LoggerCard from "@components/ui/logger_card.astro";
 
 <section class="relative w-full text-center">
     <div class="flex flex-row gap-12 justify-center py-8">
-        <h1 class="font-bold text-3xl my-8">NOTRE ÉQUIPE DE LOGGERS</h1>
+        <h1 class="font-bold text-4xl uppercase tracking-wide my-8">Notre équipe de loggers</h1>
     </div>
     <Carousel arrow={true}>
         <LoggerCard name="Prénom" position="Fonction"/>
