Update navigation bar links

--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -23,10 +23,10 @@
                                 <a class="hover:text-blue-log" href="/engagements">Engagements</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="#">Les Loggers</a>
+                                <a class="hover:text-blue-log" href="/les-loggers">Les Loggers</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="/joinus">Nous rejoindre</a>
+                                <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
                             </li>
                             <li>
                                 <a class="hover:text-blue-log" href="#">Blog</a>
