Add missing and fix broken links

--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -19,17 +19,17 @@ import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les expertises</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-red-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="#">Découvrir nos expertises</a>
+                    <a class="bg-red-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/expertise">Découvrir nos expertises</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les métiers</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/joinus">Découvrir nos métiers</a>
+                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/nous-rejoindre">Découvrir nos métiers</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">L'engagement</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-green-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="#">Découvrir notre engagement</a>
+                    <a class="bg-green-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/engagements">Découvrir notre engagement</a>
                 </div>
             </div>
         </div>
