--- a/src/components/homepage/section_recruitment.astro
+++ b/src/components/homepage/section_recruitment.astro
@@ -32,7 +32,7 @@ const jobEntries = await getCollection('job');
                         ))}
                     </ul>
                 </div>
-                <a class="bg-black text-white place-self-center lg:place-self-end text-xl lg:text-2xl font-bold rounded-[12px] max-w-sm px-6 py-4" href="/joinus">Découvrir toutes nos offres</a>
+                <a class="bg-black text-white place-self-center lg:place-self-end text-xl lg:text-2xl font-bold rounded-[12px] max-w-sm px-6 py-4" href="/nous-rejoindre">Découvrir toutes nos offres</a>
             </div>
         </div>
     </div>
