--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -15,8 +15,8 @@
                         <p>75003 Paris</p>
                     </div>
                     <div class="flex flex-col">
-                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@wearelog.fr</a>
-                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="recrutement@wearelog.fr">recrutement@wearelog.fr</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@log.consulting</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="recrutement@wearelog.fr">recrutement@log.consulting</a>
                     </div>
                 </div>
                 <div class="relative flex items-center my-auto">
@@ -38,7 +38,7 @@
                 <div class="hidden relative lg:flex items-center ml-20 font-semibold text-xl">
                     <ul class="marker:text-yellow-log list-inside list-[square]">
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="/expertise">
                                 Expertise technique
                             </a>
                         </li>
@@ -48,17 +48,17 @@
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="/engagements">
                                 Engagement RSE
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="nous-rejoindre">
                                 Recrutement
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@log.consulting">
                                 Contact
                             </a>
                         </li>
