--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -16,7 +16,7 @@
                     </div>
                     <div class="flex flex-col">
                         <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@log.consulting</a>
-                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="recrutement@wearelog.fr">recrutement@log.consulting</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:recrutement@wearelog.fr">recrutement@log.consulting</a>
                     </div>
                 </div>
                 <div class="relative flex items-center my-auto">
