Update navigation bar links

--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -14,22 +14,22 @@
                     <div class="hidden lg:block relative bg-white">
                         <ul class="flex flex-row text-lg space-x-8 leading-8 text-center">
                             <li>
-                                <a class="hover:text-blue-log" href="/expertise">Expertise</a>
+                                <a class="hover:text-red-log" href="/expertise">Expertise</a>
                             </li>
                             <li>
                                 <a class="hover:text-blue-log" href="#">Métiers</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="/engagements">Engagements</a>
+                                <a class="hover:text-green-log" href="/engagements">Engagements</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="/les-loggers">Les Loggers</a>
+                                <a class="hover:text-yellow-log" href="/les-loggers">Les Loggers</a>
                             </li>
                             <li>
                                 <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="#">Blog</a>
+                                <a class="hover:text-blue-log" href="blog">Blog</a>
                             </li>
                         </ul>
                     </div>
