--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -7,13 +7,14 @@ interface Props {
     class?: string;
     color?: Color;
     dark?: boolean;
+    href?: string;
 }
-const { title, description, class: className = "lg:flex", color = Color.RED,  dark = true }: Props = Astro.props;
+const { title, description, class: className = "lg:flex", color = Color.RED,  dark = true, href = "#" }: Props = Astro.props;
 ---
 
 <div class={className + ` overflow-hidden flex-col items-center text-center max-w-sm border-2 ${dark === true ? "border-black" : `border-${color}`} rounded-t-[20px] font-mono`}>
     <img src={ArticleBlogReference} alt="Image d'un article" />
-    <p class={`bg-${color} border-y-2 border-y-black text-white text-2xl px-8 py-2 w-full`}>{title}</p>
-    <p class="text-xl px-4 pt-6 pb-3">{description}</p>
-    <a class={`font-bold text-xl text-${color} px-4 pt-3 pb-6`} href="#">En savoir plus</a>
+    <p class={`bg-${color} border-y-2 border-y-black text-white text-2xl px-1 py-2 w-full`}>{title}</p>
+    <p class="text-xl px-4 pt-6 line-clamp-3">{description}</p>
+    <a class={`font-bold text-xl text-${color} px-4 pt-3 pb-6`} href={href}>En savoir plus</a>
 </div>
