Improve width behavior of `TitleBanner` component

--- a/src/components/ui/title_banner.astro
+++ b/src/components/ui/title_banner.astro
@@ -10,7 +10,7 @@ const { title }: Props = Astro.props;
     <div class="bg-transparent border-l-2 border-b-2 rounded-bl-3xl border-black w-[44px] h-[44px]">
     </div>
   </div>
-  <div class="flex items-center justify-center w-full lg:w-[53vw] h-full rounded-t-3xl bg-blue-log">
+  <div class="flex items-center justify-center w-full lg:w-auto lg:min-w-xl lg:max-w-8xl h-full rounded-t-3xl bg-blue-log">
     <h1 class="uppercase text-white font-bold text-center text-3xl lg:text-4xl px-4 py-2 lg:py-0 tracking-wider">
       {title}
     </h1>
