--- a/src/components/homepage/section_articles.astro
+++ b/src/components/homepage/section_articles.astro
@@ -1,13 +1,24 @@
 ---
 import ArticleCard from "@components/ui/article_card.astro";
+import { Color } from "@libs/types";
+
+import { getCollection } from "astro:content";
+const allBlogEntries = await getCollection("blog");
 ---
 
 <section class="relative w-full text-center">
     <h1 class="font-bold text-3xl py-8">NOS DERNIERS ARTICLES</h1>
     <div class="flex flex-col lg:flex-row gap-10 justify-center items-center mx-auto max-lg:px-4 py-8">
-        <ArticleCard title="Titre d'un article" description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus," class="lg:flex"/>
-        <ArticleCard title="Titre d'un article" description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus," class="hidden lg:flex"/>
-        <ArticleCard title="Titre d'un article" description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus," class="hidden lg:flex"/>
+        {allBlogEntries.slice(0, 3).map((article) => (
+            <ArticleCard
+                title={article.data.title}
+                description={article.data.description}
+                class="lg:flex"
+                color={Color.RED}
+                dark={true}
+                href={`/blog/${article.slug}`}
+            />
+        ))}
     </div>
-    <a class="bg-yellow-log font-sans font-bold text-black text-xl px-8 py-2 rounded-[12px]" href="#">Lire tous nos articles</a>
+    <a class="bg-yellow-log font-sans font-bold text-black text-xl px-8 py-2 rounded-[12px]" href="/blog">Lire tous nos articles</a>
 </section>
