Update navigation and footer links

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="/blog">
                                 Blog
                             </a>
                         </li>
