--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -29,7 +29,7 @@
                                 <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="blog">Blog</a>
+                                <a class="hover:text-blue-log" href="/blog">Blog</a>
                             </li>
                         </ul>
                     </div>
